Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntObjBoolObj.quorum
class Main
    action Main
        Boolean v
        v:SetValue(true)
        Test(v)
    end

    action Test(Integer var)
    end
end
